<resources>
    <string name="app_name">Room DataBase App</string>
    <string name="login_at_room_db">Login At Room DB</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_at_room_db">Register At Room DB</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
</resources>