<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_at_room_db"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="50dp"
        android:id="@+id/edName"
        android:inputType="textPersonName"
        android:autofillHints="Name"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_marginTop="08dp"
        android:id="@+id/edNumber"
        android:inputType="number"
        android:autofillHints="phone"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_marginTop="08dp"
        android:id="@+id/edEmail"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="08dp"
        android:id="@+id/edPassword"
        android:inputType="textPassword"
        android:autofillHints="password"
    />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegisterRA"
        android:layout_marginTop="08dp"
    />


</LinearLayout>